Fix alignment in popup
ERM35304

[4.4.x]

--- a/resources/stylesheet/data/grid.less
+++ b/resources/stylesheet/data/grid.less
@@ -147,6 +147,9 @@
 
 .grid-filter-popup-head {
 	padding-top: 5px;
+	label {
+		margin-top: 5px;
+	}
 	.oo-ui-buttonWidget {
 		float: right;
 		&.grid-filter-popup-clear {
